<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/input_area"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:background="@color/card_color">

    <View
        android:background="@color/gray_D5"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <ImageButton
        android:id="@+id/ib_input_area_album"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_album"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:background="?android:selectableItemBackgroundBorderless" />

    <EditText
        android:id="@+id/et_input_area_reply"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/iv_input_area_submit"
        android:layout_toRightOf="@+id/ib_input_area_album"
        android:background="@drawable/et_input_area_reply_style"
        android:hint="Say something..."
        android:includeFontPadding="true"
        android:paddingLeft="10dp"
        android:textColor="@color/text_color"
        android:textSize="15sp" />

    <ImageButton
        android:id="@+id/iv_input_area_submit"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:background="?android:selectableItemBackgroundBorderless"
        android:src="@drawable/ic_send"
        android:tint="@drawable/selector_enable" />

    <TextView
        android:id="@+id/tv_input_area_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/et_input_area_reply"
        android:layout_toRightOf="@+id/ib_input_area_album"
        android:text="Name:"
        android:textColor="@color/text_color" />

    <EditText
        android:id="@+id/et_input_area_name"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="Name"
        android:textSize="16sp"
        android:textColor="@color/text_color"
        android:paddingLeft="10dp"
        android:paddingBottom="2dp"
        android:layout_below="@+id/et_input_area_reply"
        android:layout_toRightOf="@+id/tv_input_area_name"
        android:background="@drawable/et_input_area_reply_style" />

</RelativeLayout>