<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_reply_handler"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="20dp"
    app:cardBackgroundColor="@color/card_color"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/lv_reply_handler_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Student12345"
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="'s reply"
                android:textColor="@color/text_color"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_D5" />

        <ListView
            android:id="@+id/lv_reply_handler_choices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"></ListView>

    </LinearLayout>

</androidx.cardview.widget.CardView>

