<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrivateMessageChatActivity">

    <LinearLayout
        android:id="@+id/ll_toolbar_pm_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/layout_toolbar_pm_chat" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_pm_chat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_pm_chat_input_area"
        android:layout_below="@+id/ll_toolbar_pm_chat"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:background="@color/background_color_chat" />

    <LinearLayout
        android:id="@+id/ll_pm_chat_input_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <include
            layout="@layout/layout_input_area_quote"
            android:visibility="gone" />

        <FrameLayout
            android:id="@+id/fl_input_area"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</RelativeLayout>