...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_pm_chat_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Looking for a teammate"
                android:textColor="@color/text_color"
                android:textSize="14sp"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
...
                    android:text="w/ "
                    android:textColor="@color/text_color"
                    android:textSize="14sp"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />

                <TextView
                    android:id="@+id/tv_pm_chat_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Student54321"
                    android:textColor="@color/orange"
                    android:textSize="14sp"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />
...
